@@ -200,6 +200,8 @@ Core and Builtins
 Library
 -------
 
+- Actually make the SimpleXMLRPCServer CGI handler work.
+
 - Issue #2522: locale.format now checks its first argument to ensure it has
   been passed only one pattern, avoiding mysterious errors where it appeared
   that it was failing to do localization.
